Fix h4 being too large, footer not extending to bottom

--- a/css/main.css
+++ b/css/main.css
@@ -38,6 +38,7 @@ footer {
     bottom: 0;
     width: 100%;
     height: 3vh;
+    box-shadow: 0 50vh 0 50vh #ef6c00;
 }
 
 .center-align {
@@ -95,14 +96,14 @@ h4 {
 /* Computers */
  @media only screen and (orientation: landscape) and (min-width: 800px) {
      h2 {
-        font-size: 70px !important;
+        font-size: 50px !important;
      }
     #bannerInfo h3 {
         font-size: 8vh;
     }
 
     h4 {
-        font-size: 60px !important;
+        font-size: 30px !important;
     }
  }
 
